--- a/Obi/Obi/Dialogs/ImportFileSplitSize.de.resx
+++ b/Obi/Obi/Dialogs/ImportFileSplitSize.de.resx
@@ -249,7 +249,7 @@
     <value />
   </data>
   <data name="mbtnDesendingOrder.Location" type="System.Drawing.Point, System.Drawing">
-    <value>174, 34</value>
+    <value>209, 34</value>
   </data>
   <data name="mbtnDesendingOrder.Text" xml:space="preserve">
     <value>&amp;Aufsteigend sortieren</value>
@@ -262,6 +262,9 @@
   </data>
   <data name="mbtnAscendingOrder.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="mbtnAscendingOrder.Location" type="System.Drawing.Point, System.Drawing">
+    <value>20, 35</value>
   </data>
   <data name="mbtnAscendingOrder.Size" type="System.Drawing.Size, System.Drawing">
     <value>158, 26</value>
@@ -279,7 +282,7 @@
     <value />
   </data>
   <data name="m_grpArrangeAudioFiles.Size" type="System.Drawing.Size, System.Drawing">
-    <value>343, 65</value>
+    <value>387, 65</value>
   </data>
   <data name="m_grpArrangeAudioFiles.Text" xml:space="preserve">
     <value>Audiodateien ordnen</value>
@@ -294,7 +297,7 @@
     <value />
   </data>
   <data name="m_grpAddFiles.Size" type="System.Drawing.Size, System.Drawing">
-    <value>413, 209</value>
+    <value>413, 210</value>
   </data>
   <data name="m_txtCharToReplaceWithSpace.AccessibleName" xml:space="preserve">
     <value>mit Leerzeichen ersetzen</value>
@@ -505,10 +508,6 @@
   </data>
   <data name="m_grpSplitPhraseOrPhraseDetection.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 437</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="m_grpSplitPhraseOrPhraseDetection.ShowHelp" type="System.Boolean, mscorlib">
-    <value>True</value>
   </data>
   <data name="m_grpSplitPhraseOrPhraseDetection.Size" type="System.Drawing.Size, System.Drawing">
     <value>413, 103</value>
