--- a/trunk/Obi/Obi/Dialogs/ImportFileSplitSize.de.resx
+++ b/trunk/Obi/Obi/Dialogs/ImportFileSplitSize.de.resx
@@ -128,6 +128,9 @@
     <value />
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>72, 53</value>
+  </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>155, 16</value>
   </data>
@@ -145,6 +148,9 @@
   </data>
   <data name="mPhraseSizeTextBox.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="mPhraseSizeTextBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>291, 51</value>
   </data>
   <data name="mOKButton.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -185,6 +191,9 @@
   <data name="lstManualArrange.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <data name="lstManualArrange.Size" type="System.Drawing.Size, System.Drawing">
+    <value>281, 116</value>
+  </data>
   <data name="m_btnMoveUp.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
@@ -193,6 +202,9 @@
   </data>
   <data name="m_btnMoveUp.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="m_btnMoveUp.Location" type="System.Drawing.Point, System.Drawing">
+    <value>309, 11</value>
   </data>
   <data name="m_btnMoveUp.Text" xml:space="preserve">
     <value>H&amp;och</value>
@@ -206,6 +218,9 @@
   <data name="m_btnMoveDown.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <data name="m_btnMoveDown.Location" type="System.Drawing.Point, System.Drawing">
+    <value>309, 43</value>
+  </data>
   <data name="m_btnMoveDown.Text" xml:space="preserve">
     <value>&amp;Runter</value>
   </data>
@@ -217,6 +232,9 @@
   </data>
   <data name="m_btnAdd.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="m_btnAdd.Location" type="System.Drawing.Point, System.Drawing">
+    <value>309, 72</value>
   </data>
   <data name="m_btnAdd.Text" xml:space="preserve">
     <value>&amp;Anfügen</value>
@@ -232,6 +250,9 @@
   </data>
   <data name="m_btnRemove.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="m_btnRemove.Location" type="System.Drawing.Point, System.Drawing">
+    <value>311, 101</value>
   </data>
   <data name="m_btnRemove.Text" xml:space="preserve">
     <value>&amp;Entfernen</value>
